# Veer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  VeerEngine.sln
MIR/: MIR.vcxproj  application.cpp
MIR/Display/: swap_chain.h  window.h  windowing_service.h
VeerEngine/: VeerEngine.vcxproj  VeerEngine.vcxproj.filters  application.cpp  application.h  application_config.cpp  application_config.h  pch.h
VeerEngine/Core/: callback_set.h  core.h  debug.cpp  debug.h  service.h  service_locator.h  service_locator.hpp  singleton.h
VeerEngine/Display/: command_buffer.cpp  command_buffer.h  command_queue.h  render_device.h  render_device_resource.cpp  render_device_resource.h  rendering_service.cpp  rendering_service.h  rendering_thread.h  resource_synchronisation.h  swap_chain.cpp  swap_chain.h  window.cpp  window.h  windowing_service.h
VeerEngineTestApp/: VeerEngineTestApp.vcxproj  main.cpp
doc/brainstorm/: scope.md  (+1 more)
src/: CMakeLists.txt
src/display/render/: CMakeLists.txt  base_types.h  blend_state.h  command_buffer.cpp  command_buffer.h  command_queue.cpp  command_queue.h  rasterizer_state.h  render_device.cpp  render_device.h  render_device_buffer.cpp  render_device_buffer.h  render_device_data_format.h  render_device_resource.cpp  render_device_resource.h  render_device_resource_sync_state.h  render_device_texture.cpp  render_device_texture.h  render_device_texture_2d.h  render_device_texture_3d.h  render_device_texture_base.h  rendering_service.cpp  rendering_service.h  rendering_thread.h  resource_desc.h  resource_synchronisation.h  shader_compiler.cpp  shader_compiler.h  shader_source.cpp  shader_source.h  swap_chain.cpp  swap_chain.h  technique.cpp  technique.h  upload_context.h
src/display/render/backends/: CMakeLists.txt
src/display/render/backends/dx12/: CMakeLists.txt  dx12_command_buffer.cpp  dx12_command_buffer.h  dx12_command_buffer.inl  dx12_command_buffer_old.cpp  dx12_command_queue.cpp  dx12_command_queue.h  dx12_descriptor_heap.cpp  dx12_descriptor_heap.h  dx12_pch.h  dx12_render_device.cpp  dx12_render_device.h  dx12_render_device_backbuffer.cpp  dx12_render_device_backbuffer.h  dx12_render_device_buffer.cpp  dx12_render_device_buffer.h  dx12_render_device_buffer.inl  dx12_render_device_data_format.h  dx12_render_device_resource.cpp  dx12_render_device_resource.h  dx12_render_device_resource.inl  dx12_render_device_resource_sync_state.h  dx12_render_device_texture_2d.cpp  dx12_render_device_texture_3d.cpp  dx12_render_device_texture_3d.inl  dx12_rendering_service.cpp  dx12_rendering_service.h  dx12_resource_synchronisation.h  dx12_shader_compiler.cpp  dx12_shader_compiler.h  dx12_swap_chain.cpp  dx12_swap_chain.h  dx12_technique.cpp  dx12_technique.h
(+76 files in other folders)
